<resources>
    <string name="app_name">Druplay Radio</string>
    <string name="show_name">Druplay Radio</string>
    <string name="footer_credit">Druplay Technology</string>
    <string name="sign_up_statement">Just installed this app ?</string>
    <string name="your_phone">Your Phone</string>
    <string name="your_nickname">Full Name</string>
    <string name="continue_">Continue</string>
    <string name="setup_text">Setup Rights Connect</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_policy">ActivityPolicy</string>
    <string name="large_text">Please wait...</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="help_us_to_identify_you">Help us to identify you !</string>
    <string name="account">Account</string>
    <string name="on_air">On Air</string>
    <string name="profile">Profile</string>
    <string name="connect">Connect</string>
    <string name="more">More</string>
    <string name="adverts">Adverts</string>
    <string name="druplay_technology">Druplay Technology</string>
</resources>
