<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="org.druplay.radioapp.MainActivity">
    <item
        android:icon="@drawable/ic_ondemand_video"
        android:iconTint="@color/colorMix1"
        android:id="@+id/action_onair"
        android:orderInCategory="100"
        android:title="@string/on_air"
        app:showAsAction="always" />

    <item
        android:icon="@drawable/ic_favorite"
        android:iconTint="@color/colorMix1"
        android:id="@+id/action_connect"
        android:orderInCategory="100"
        android:title="@string/connect"
        app:showAsAction="ifRoom" />

    <item
        android:icon="@drawable/ic_public_adverts"
        android:iconTint="@color/colorMix21"
        android:id="@+id/action_account"
        android:orderInCategory="100"
        android:title="@string/adverts"
        app:showAsAction="ifRoom" />

</menu>
